--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "myportfolio",
+  "name": "luistorri",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "@lucide/astro": "^0.563.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.1.5",
+    "tailwindcss": "^4.1.18"
   }
 }
